Update statistics and styling across multiple pages for consistency and improved design

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
         <a href="./contect.html">Contact</a>
         <a href="./admin_login.html">Admin</a>
         
+        
         <div class="mobile-contact">
           <i class="fa fa-phone"></i>
           <span class="phone"> +18389382173</span>
@@ -59,7 +60,7 @@
             <path d="M21.801 10A10 10 0 1 1 17 3.335"></path>
             <path d="m9 11 3 3L22 4"></path>
           </svg>
-          <h2>Trusted by 1000+ Job Seekers</h2>
+          <h2>Trusted by 799+ Job Seekers</h2>
         </div>
         <!-- header -->
         <h1>We Help You Get <span>Hired</span> — Faster.</h1>
@@ -220,25 +221,25 @@
     <div class="track-record-cards">
       <div class="track-card">
         <div class="icon-box"><i class="fas fa-users"></i></div>
-        <h3>500+</h3>
+        <h3>799+</h3>
         <h4>Job Seekers Placed</h4>
         <p>Successfully connected with opportunities</p>
       </div>
       <div class="track-card">
         <div class="icon-box"><i class="fas fa-briefcase"></i></div>
-        <h3>200+</h3>
+        <h3>150+</h3>
         <h4>Partner Companies</h4>
         <p>Across various industries</p>
       </div>
       <div class="track-card">
         <div class="icon-box"><i class="fas fa-clock"></i></div>
-        <h3>48hrs</h3>
+        <h3>72hrs</h3>
         <h4>Average Response Time</h4>
         <p>Quick turnaround for applications</p>
       </div>
       <div class="track-card">
         <div class="icon-box"><i class="fas fa-award"></i></div>
-        <h3>85%</h3>
+        <h3>89%</h3>
         <h4>Success Rate</h4>
         <p>Within 3 months of registration</p>
       </div>
@@ -323,7 +324,7 @@
           <div style="background-color: #1a72b2; padding: 10px; border-radius: 8px;">
             <img src="https://img.icons8.com/ios-filled/30/ffffff/conference-call.png" alt="icon" />
           </div>
-          <h3 style="margin: 0;">PlaceXis Technology</h3>
+          <h3 style="margin: 0; font-size: 25px;">PlaceXis Technology</h3>
         </div>
         <p style="margin-top: 15px; line-height: 1.6; color: #c9d1d9; font-weight: 200; font-size: 16px;">
           Connecting talented professionals with their dream careers. We help you get hired faster with our
