--- a/client/about.html
+++ b/client/about.html
@@ -28,7 +28,7 @@
         <a href="./services.html">Services</a>
         <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
-        <a href="./admin_login.html">Admin</a>
+        
         
         <div class="mobile-contact">
           <i class="fa fa-phone"></i>
@@ -58,9 +58,9 @@
     </div>
 
     <div class="stats">
-      <div class="stat-box"><strong>500+</strong><br>Successful Placements</div>
-      <div class="stat-box"><strong>200+</strong><br>Partner Companies</div>
-      <div class="stat-box"><strong>85%</strong><br>Success Rate</div>
+      <div class="stat-box"><strong>799+</strong><br>Successful Placements</div>
+      <div class="stat-box"><strong>150+</strong><br>Partner Companies</div>
+      <div class="stat-box"><strong>89%</strong><br>Success Rate</div>
       <div class="stat-box"><strong>3</strong><br>Years Experience</div>
     </div>
   </section>
@@ -115,7 +115,7 @@
           <div style="background-color: #1F6FEB; padding: 10px; border-radius: 8px;">
             <img src="https://img.icons8.com/ios-filled/30/ffffff/conference-call.png" alt="icon" />
           </div>
-          <h3 style="margin: 0;">PlaceXis Technology</h3>
+          <h3 style="margin: 0; font-size: 25px;">PlaceXis Technology</h3>
         </div>
         <p style="margin-top: 15px; line-height: 1.6; color: #c9d1d9; font-weight: 200; font-size: 16px;">
           Connecting talented professionals with their dream careers. We help you get hired faster with our
