--- a/client/services.html
+++ b/client/services.html
@@ -27,7 +27,7 @@
         <a href="./services.html" class="active">Services</a>
         <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
-        <a href="./admin_login.html">Admin</a>
+        
         
         <div class="mobile-contact">
           <i class="fa fa-phone"></i>
@@ -166,7 +166,7 @@
           <div style="background-color: #1F6FEB; padding: 10px; border-radius: 8px;">
             <img src="https://img.icons8.com/ios-filled/30/ffffff/conference-call.png" alt="icon" />
           </div>
-          <h3 style="margin: 0;">PlaceXis Technology</h3>
+          <h3 style="margin: 0; font-size: 25px;">PlaceXis Technology</h3>
         </div>
         <p style="margin-top: 15px; line-height: 1.6; color: #c9d1d9; font-weight: 200; font-size: 16px;">
           Connecting talented professionals with their dream careers. We help you get hired faster with our
