--- a/client/review_form.html
+++ b/client/review_form.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/review.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <title>Review</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>Review</title>
+  <link rel="icon" type="image/x-icon" href="./images/pt.jpg">
 </head>
 
 <body>
@@ -27,8 +29,8 @@
         <a href="./services.html">Services</a>
         <a href="./review_form.html" class="active">Review</a>
         <a href="./contect.html">Contact</a>
-        
-        
+
+
         <div class="mobile-contact">
           <i class="fa fa-phone"></i>
           <span class="phone"> +18389382173</span>
@@ -41,7 +43,7 @@
   </header>
 
 
-<section class="hero">
+  <section class="hero">
     <h1>feedback Form</h1>
     <p>Real people, real results. Hear from our clients who found their dream careers.</p>
   </section>
@@ -110,11 +112,16 @@
         <h4>Our Services</h4>
         <ul
           style="list-style: none; padding: 0; line-height: 1.8; font-weight: 200; font-size: 16px; margin-top: 45px; text-decoration: none; color: #fff;">
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Resume Optimization</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Interview Coaching</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Job Matching</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Career Guidance</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Skill Assessment</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;" class="footer-link">Resume
+              Optimization</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;" class="footer-link">Interview
+              Coaching</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;" class="footer-link">Job Matching</a>
+          </li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;" class="footer-link">Career
+              Guidance</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;" class="footer-link">Skill
+              Assessment</a></li>
         </ul>
       </div>
 
@@ -122,11 +129,42 @@
       <div style="flex: 1; min-width: 350px; margin-bottom: 30px;">
         <h4>Contact Info</h4>
         <p style="line-height: 2; font-weight: 200; font-size: 16px; margin-top: 45px;">
-          <svg style="height: 20px; width:auto;" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M1 5V1H7V5L4.5 7.5L8.5 11.5L11 9H15V15H11C5.47715 15 1 10.5228 1 5Z" fill="#1a72b2"></path> </g></svg> +18389382173</p>
-        <p style="line-height: 2; font-weight: 200; font-size: 16px;  "> 
-          <svg style="height: 20px; " viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="style=fill"> <g id="email"> <path id="Subtract" fill-rule="evenodd" clip-rule="evenodd" d="M7 2.75C5.38503 2.75 3.92465 3.15363 2.86466 4.1379C1.79462 5.13152 1.25 6.60705 1.25 8.5V15.5C1.25 17.393 1.79462 18.8685 2.86466 19.8621C3.92465 20.8464 5.38503 21.25 7 21.25H17C18.615 21.25 20.0754 20.8464 21.1353 19.8621C22.2054 18.8685 22.75 17.393 22.75 15.5V8.5C22.75 6.60705 22.2054 5.13152 21.1353 4.1379C20.0754 3.15363 18.615 2.75 17 2.75H7ZM19.2285 8.3623C19.5562 8.10904 19.6166 7.63802 19.3633 7.31026C19.1101 6.98249 18.6391 6.9221 18.3113 7.17537L12.7642 11.4616C12.3141 11.8095 11.6858 11.8095 11.2356 11.4616L5.6886 7.17537C5.36083 6.9221 4.88982 6.98249 4.63655 7.31026C4.38328 7.63802 4.44367 8.10904 4.77144 8.3623L10.3185 12.6486C11.3089 13.4138 12.691 13.4138 13.6814 12.6486L19.2285 8.3623Z" fill="#1a72b2"></path> </g> </g> </g></svg> SUPPORT@PLACEXISTECHNOLOGY.INFO</p>
+          <svg style="height: 20px; width:auto;" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path d="M1 5V1H7V5L4.5 7.5L8.5 11.5L11 9H15V15H11C5.47715 15 1 10.5228 1 5Z" fill="#1a72b2"></path>
+            </g>
+          </svg> +18389382173
+        </p>
+        <p style="line-height: 2; font-weight: 200; font-size: 16px;  ">
+          <svg style="height: 20px; " viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <g id="style=fill">
+                <g id="email">
+                  <path id="Subtract" fill-rule="evenodd" clip-rule="evenodd"
+                    d="M7 2.75C5.38503 2.75 3.92465 3.15363 2.86466 4.1379C1.79462 5.13152 1.25 6.60705 1.25 8.5V15.5C1.25 17.393 1.79462 18.8685 2.86466 19.8621C3.92465 20.8464 5.38503 21.25 7 21.25H17C18.615 21.25 20.0754 20.8464 21.1353 19.8621C22.2054 18.8685 22.75 17.393 22.75 15.5V8.5C22.75 6.60705 22.2054 5.13152 21.1353 4.1379C20.0754 3.15363 18.615 2.75 17 2.75H7ZM19.2285 8.3623C19.5562 8.10904 19.6166 7.63802 19.3633 7.31026C19.1101 6.98249 18.6391 6.9221 18.3113 7.17537L12.7642 11.4616C12.3141 11.8095 11.6858 11.8095 11.2356 11.4616L5.6886 7.17537C5.36083 6.9221 4.88982 6.98249 4.63655 7.31026C4.38328 7.63802 4.44367 8.10904 4.77144 8.3623L10.3185 12.6486C11.3089 13.4138 12.691 13.4138 13.6814 12.6486L19.2285 8.3623Z"
+                    fill="#1a72b2"></path>
+                </g>
+              </g>
+            </g>
+          </svg> SUPPORT@PLACEXISTECHNOLOGY.INFO
+        </p>
         <p style="line-height: 2; font-weight: 200; font-size: 16px; ">
-          <svg style="height: 20px; width:auto; "version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill="#1a72b2" d="M32,0C18.746,0,8,10.746,8,24c0,5.219,1.711,10.008,4.555,13.93c0.051,0.094,0.059,0.199,0.117,0.289l16,24 C29.414,63.332,30.664,64,32,64s2.586-0.668,3.328-1.781l16-24c0.059-0.09,0.066-0.195,0.117-0.289C54.289,34.008,56,29.219,56,24 C56,10.746,45.254,0,32,0z M32,32c-4.418,0-8-3.582-8-8s3.582-8,8-8s8,3.582,8,8S36.418,32,32,32z"></path> </g></svg> 5900 BALCONES DRIVE AUSTIN, TX 78731 USA</p>
+          <svg style="height: 20px; width:auto; " version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" enable-background="new 0 0 64 64"
+            xml:space="preserve" fill="#000000">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path fill="#1a72b2"
+                d="M32,0C18.746,0,8,10.746,8,24c0,5.219,1.711,10.008,4.555,13.93c0.051,0.094,0.059,0.199,0.117,0.289l16,24 C29.414,63.332,30.664,64,32,64s2.586-0.668,3.328-1.781l16-24c0.059-0.09,0.066-0.195,0.117-0.289C54.289,34.008,56,29.219,56,24 C56,10.746,45.254,0,32,0z M32,32c-4.418,0-8-3.582-8-8s3.582-8,8-8s8,3.582,8,8S36.418,32,32,32z">
+              </path>
+            </g>
+          </svg> 5900 BALCONES DRIVE AUSTIN, TX 78731 USA
+        </p>
       </div>
 
     </div>
@@ -176,7 +214,8 @@
         </div>
       </div>
     </div>
-<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="./images/top.svg"></img></button> </footer>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="./images/top.svg"></img></button>
+  </footer>
 
   <script>
     document.getElementById("reviewForm").addEventListener("submit", async function (e) {
@@ -220,22 +259,22 @@
 
     let mybutton = document.getElementById("myBtn");
 
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () { scrollFunction() };
 
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
 
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
 
     window.addEventListener("load", () => {
       chatWindow.style.display = 'none';
@@ -331,6 +370,21 @@ function topFunction() {
       chatBody.appendChild(msgWrapper);
       chatBody.scrollTop = chatBody.scrollHeight;
     }
+    // Disable right-click
+    document.addEventListener('contextmenu', function (e) {
+      e.preventDefault();
+    });
+
+    // Disable F12, Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+U
+    document.addEventListener('keydown', function (e) {
+      if (
+        e.key === "F12" ||
+        (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J")) ||
+        (e.ctrlKey && e.key === "U")
+      ) {
+        e.preventDefault();
+      }
+    });
   </script>
 
 </body>
