--- a/client/admin_login.html
+++ b/client/admin_login.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Login</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Login</title>
+  <link rel="icon" type="image/x-icon" href="./images/pt.jpg">
   <style>
     * {
       box-sizing: border-box;
@@ -80,6 +82,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="login-container">
     <h2>Admin Login</h2>
@@ -118,4 +121,5 @@
     }
   </script>
 </body>
+
 </html>
